# packfs

./: CMakeLists.txt  Kconfig  component.mk  dirops.c  fileops.c  imagefs.c  imagefsdfu.c  imagefsops.c  lzoops.c  packfs-priv.h  packfs.c  packfs.py  process.c  statops.c  stream.c
include/: imagefs.h  packfs.h
src/: dirops.c  fileops.c  imagefs-priv.h  imagefs.c  imagefsdfu.c  imagefsops.c  lzoops.c  packfs-priv.h  packfs.c
